# fast-api-example

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  ansible.yaml  app.py  docker-compose-pinecone.yaml  docker-compose-redis.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: README.md  azure-pipeline.yaml  deploy-gcp.yaml  docker-gcp.yaml  docker.yaml  python.yaml
ansible/: ansible.yaml  git.yaml  var.yaml
app/: main.py  model.py
app/api/endpoints/: embed.py
app/config/: settings.py
app/db/: database.py  database_interface_factory.py  pinecone_database.py  redis_database.py
app/schemas/: default.py
embedding_api/: main.py
embedding_api/api/endpoints/: embed.py
embedding_api/db/: database_interface.py  database_interface_factory.py  dummy_database.py  pinecone_database.py  redis_database.py
infra/: README.md  containers.tf  functions.tf  main.tf
infra/azure/: main.tf  storage.tf
infra/gcp/: main.tf
tests/: .env  .env.example  conftest.py  payload_tests.py  test_main.py
