[project]
name = "embedding-api"
version = "0.1.0"
description = "Personal project to showcase my abilities"
authors = [{"name"="R"}]
license = "MIT"
package-mode = false
requires-python = ">=3.11,<4.0"
packages = [
    { include = "embedding_api"},
]


dependencies = [
    "fastapi[all] (==0.115.8)",
    "torch (==2.3.1)",
    "transformers (==4.45.2)",
    "redis (>=5.2.0,<6.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "pinecone[grpc] (>=5.4.2,<6.0.0)"
]

#[dev-dependencies]
#"pre-commit (>=4.0.1,<5.0.0)",
#"parameterized (>=0.9.0,<1.0.0)"


[tool.poetry.dependencies]
pytest = "8.4.2"
pre-commit = "4.0.1"
python-dotenv = "^1.0.1"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"